--- a/task2.html
+++ b/task2.html
@@ -61,9 +61,9 @@
     <div class="class" id= "b1">
         <p>Github:   </p><button id= "b3" onclick="githubLogin()">Login with GitHub</button><br>
     </div>
-    <!-- <div class="class" id= "b1">
+    <div class="class" id= "b1">
         </p><button id= "b4" onclick="otpLogin()">Login with OTP</button><br>
-    </div> -->
+    </div>
     
            
 
